<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E4E4"
    tools:context=".Quiz">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginTop="50dp"
                android:text="Select your domain"
                android:textAlignment="center"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155" />



        <androidx.cardview.widget.CardView
            android:id="@+id/webDev"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_webdev">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/web_development"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textAlignment="center"
                    android:textSize="20sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
android:id="@+id/AppDev"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_appdev">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/application_development"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textAlignment="center"
                    android:textSize="20sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
android:id="@+id/cp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_cp">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/competitive_programming"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textAlignment="center"
                    android:textSize="20sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>