<?xml version="1.0" encoding="utf-8"?>
   <androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    tools:context=".Drawer_Layout">




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:title="Codigo Plataforma"
            app:titleTextColor="#FCFDFD">

        </androidx.appcompat.widget.Toolbar>



    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.95" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:text="@string/welcome_onboard"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline_end"
            app:layout_constraintEnd_toStartOf="@+id/endHorizontal"
            app:layout_constraintStart_toStartOf="@+id/startHorizontal" />



        <androidx.cardview.widget.CardView
            android:id="@+id/code"
            android:layout_width="144dp"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="150dp"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/endHorizontal"
            app:layout_constraintStart_toStartOf="@+id/startHorizontal"
            app:layout_constraintTop_toTopOf="@+id/guideline_end">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="97dp"
                    android:layout_height="110dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_code">

                </ImageView>

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/code"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/quiz"
            android:layout_width="143dp"
            android:layout_height="148dp"
            android:elevation="130dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="150dp"
            android:layout_marginStart="200dp"
            app:cardCornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/endHorizontal"
            app:layout_constraintStart_toStartOf="@+id/startHorizontal"
            app:layout_constraintTop_toTopOf="@+id/guideline_end">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="97dp"
                    android:layout_height="110dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_quiz">

                </ImageView>

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/practice"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/news"
            android:layout_width="143dp"
            android:layout_height="148dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="200dp"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/endHorizontal"
            app:layout_constraintStart_toStartOf="@+id/startHorizontal"
            app:layout_constraintTop_toTopOf="@+id/guideline_end"
         >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView


                    android:layout_width="97dp"
                    android:layout_height="110dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/ic_practice">

                </ImageView>

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/news"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/us"
            android:layout_marginTop="250dp"
            android:layout_marginStart="200dp"
            android:layout_width="144dp"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:elevation="130dp"
            app:cardCornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/endHorizontal"
            app:layout_constraintStart_toStartOf="@+id/startHorizontal"
            app:layout_constraintTop_toTopOf="@+id/guideline_end">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="87dp"
                    android:layout_height="101dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_us">

                </ImageView>

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/us"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>





    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigaionView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/nav_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
